task 1: create client model task 2: create vendor model task 3: add association in models

--- a/app/views/home/_sidebar.html.erb
+++ b/app/views/home/_sidebar.html.erb
@@ -14,21 +14,13 @@
                   
                 </li>
                 <li class="has-subnav">
-                    <a href="#">
+                    <a href="/clients">
                         <i class="fa fa-users fa-2x"></i>
                         <span class="nav-text">
                             Clients
                         </span>
                     </a>
                     
-                </li>
-                <li class="has-subnav">
-                    <a href="#">
-                       <i class="fa fa-vcard fa-2x"></i>
-                        <span class="nav-text">
-                            Vendors
-                        </span>
-                    </a>
                 </li>
             </ul>
             <ul class="logout">
