--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <%= render 'home/header' %>
     <%= render 'home/sidebar' %>
-    <div class="master-page" id="main" onmouseover="mouseOver()" onmouseout="mouseOut()">
+    <div class="master-page" id="main"  onmouseout="mouseOut()">
       <p class="notice"><%= notice %></p>
       <p class="alert"><%= alert %></p>
       <%= yield %>
