--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -22,18 +22,12 @@
     <br />
     <%= form.text_field :password,:required => true ,class: "form-control-xs"%>
   </div>
-  <br />
-  <div class="field">
-    <%= form.label :token %>
-    <br />
-    <%= form.text_field :token ,class: "form-control-xs" %>
-  </div>
   <label><strong>Login API Data</strong></label>
   <%= form.fields_for :login_api do |ff| %>
   <div>
     <%= ff.label :api_method %>
     <br />
-    <%= ff.collection_select :api_method, Api.api_methods, :second, :first, include_blank: true %>
+    <%= ff.collection_select :api_method, Api.api_methods, :first, :first, include_blank: true %>
   </div>
   <br />
   <div>
