--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,8 +6,9 @@
 @import "config/colors";
 @import "config/bootstrap_variables";
 
-// External libraries
+// External libraries - both have bootstrap, ceck here
 @import "bootstrap/scss/bootstrap";
+@import "theme/theme.min";
 
 // CSS partials
 @import "components/index";
