--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Cashnow</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbo-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbo-track': 'reload' %>
-  </head>
+<html lang="en">
+  <%= render 'layouts/head' %>
 
-  <body>
-    <%= render 'home/header' %>
-    <%= render 'home/sidebar' %>
-    <div class="master-page" id="main"  onmouseout="mouseOut()">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-      <%= yield %>
+  <body id="page-top">
+    <div id="wrapper">
+      <%= render 'layouts/sidebar' %>
+      <div id="content-wrapper" class="d-flex flex-column">
+        <div id="content">
+          <%= render 'layouts/navbar' %>
+            <p class="notice"><%= notice %></p>
+            <p class="alert"><%= alert %></p>
+          <%= yield %>
+        </div>
+      </div>
     </div>
-  </body>
-  <script>
-  function mouseOver() {
-    document.getElementById("demo").style.width = "250px";
-    document.getElementById("main").style.marginLeft = "200px"
-  }
 
-  function mouseOut() {
-    document.getElementById("demo").style.width = "60px";
-    document.getElementById("main").style.marginLeft = "10px"
-  }
-  </script>
+    <a class="scroll-to-top rounded" href="#page-top">
+        <i class="fas fa-angle-up"></i>
+    </a>
+  </body>
 </html>
