--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,7 +1,17 @@
-<h1>Clients</h1>
-<%= link_to "Create New Client" , new_client_path , class: "btn btn-info" %>
 
 <%= turbo_stream_from "clients" %>
-<%= turbo_frame_tag "clients" do %>
-  <%= render @clients %>
-<% end %>
+
+<div class="container-fluid">
+  <div class="d-sm-flex align-items-center justify-content-between mb-4">
+    <h1 class="h3 mb-0 text-gray-800">Clients</h1>
+    <%= link_to "Create New Client" , new_client_path , class: "btn btn-info float-right" %>
+  </div>
+
+  <div class="row">
+    <div class="col-lg-6">
+      <%= turbo_frame_tag "clients" do %>
+        <%= render @clients %>
+      <% end %>
+    </div>
+  </div>
+</div>
