--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -4,7 +4,7 @@
 <div class="container-fluid">
   <div class="d-sm-flex align-items-center justify-content-between mb-4">
     <h1 class="h3 mb-0 text-gray-800">Clients</h1>
-    <%= link_to "Create New Client" , new_client_path , class: "btn btn-info float-right" %>
+    <%= link_to "Create New Client" , new_client_path , class: "btn btn-primary float-right" %>
   </div>
 
   <div class="row">
