--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,44 +1,48 @@
 <%= form_with model: @client do |form| %>
-  <div class="field">
-    <%= form.label :name %>
-    <br />
-    <%= form.text_field :name ,:required => true,class: "form-control-xs" %>
+  <div class="container">
+    <div class="card o-hidden border-0 shadow-lg my-5">
+      <div class="card-body p-0">
+        <!-- Nested Row within Card Body -->
+        <div class="row">
+          <div class="col-lg-7" style = "align : center;">
+            <div class="p-5">
+              <div class="text-center">
+              </div>
+              <form class="user">
+                <div class="form-group row">
+                  <div class="col-sm-6 mb-3 mb-sm-0">
+                    <%= form.text_field :name ,:required => true,class: "form-control form-control-user",placeholder: "Name" , id: "exampleFirstName" %>
+                  </div>
+                  <div class="col-sm-6">
+                    <%= form.text_field :company_name ,class: "form-control form-control-user",placeholder: "Company Name" ,id: "exampleLastName" %>
+
+                  </div>
+                </div>
+                <div class="form-group">
+                  <%= form.text_field :username ,class: "form-control form-control-user",placeholder: "User Name" ,id: "exampleInputEmail" %>
+                </div>
+                <div class="col-sm-6 row">
+                  <%= form.text_field :password ,class: "form-control form-control-user",placeholder: "Password" ,id: "exampleInputPassword" %>
+                </div>
+                <%= form.fields_for :login_api do |ff| %>
+                <br />
+                <%= ff.label :api_method %>
+                <div class="col-sm-6 row">
+                  <%= ff.collection_select :api_method, Api.api_methods, :first, :first, include_blank: true ,class: "form-control form-control-user"  %>
+                </div>
+                <br />
+                <div class="col-sm-6 row">
+                  <%= ff.text_field :api_url ,class: "form-control form-control-user",placeholder: "API URL"  %>
+                </div>
+                <%end%>
+                <br />
+                <div class="actions">
+                  <%= form.submit class:"btn btn-primary btn-user btn-block" %>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-  <br />
-  <div class="field">
-    <%= form.label :company_name %>
-    <br />
-    <%= form.text_field :company_name ,class: "form-control-xs" %>
-  </div>
-  <br />
-  <div class="field">
-    <%= form.label :username %>
-    <br />
-    <%= form.text_field :username,:required => true ,class: "form-control-xs" %>
-  </div>
-  <br />
-  <div class="field">
-    <%= form.label :password %>
-    <br />
-    <%= form.text_field :password,:required => true ,class: "form-control-xs"%>
-  </div>
-  <label><strong>Login API Data</strong></label>
-  <%= form.fields_for :login_api do |ff| %>
-  <div>
-    <%= ff.label :api_method %>
-    <br />
-    <%= ff.collection_select :api_method, Api.api_methods, :first, :first, include_blank: true %>
-  </div>
-  <br />
-  <div>
-    <%= ff.label :api_url %>
-    <br />
-    <%= ff.text_field :api_url %>
-  </div>
-  <% end %>
-  <br />
-  <div class="actions">
-    <%= form.submit class:'btn btn-info' %>
-  </div>
-  <br />
 <% end %>
