--- a/app/views/clients/edit.html.erb
+++ b/app/views/clients/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Create New Client</h1>
+<h4 class="h4 text-gray-900 mb-4">Edit Client</h4>
 <%= render 'form' ,client: @client %>
 <%= link_to "Back" , clients_path, class: "btn btn-info"%>
