--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -17,18 +17,16 @@
             <i class="fas fa-fw fa-tachometer-alt"></i>
             <span>Dashboard</span></a>
     </li>
-
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="/clients">
             <i class="fas fa-fw fa-chart-area"></i>
             <span>Clients</span></a>
     </li>
 
     <!-- Nav Item - Tables -->
-    <li class="nav-item">
-        <a class="nav-link" href="tables.html">
-            <i class="fas fa-fw fa-table"></i>
-            <span>Vendors</span></a>
+    <li class="nav-item" id="myCheck" >
+            <i class="fas fa-fw fa-table"  ></i>
+            <span>Vendors</span>
     </li>
 
     <li class="nav-item">
@@ -46,3 +44,9 @@
     </div>
 
 </ul>
+<script>
+    if (window.location.href.indexOf("vendors") > -1) {
+ document.getElementById("myCheck").style.color = "white"
+ console.log("hello");
+}
+</script>
