Tasks: - demo settings - toastr changes

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -5,7 +5,7 @@
         <div class="sidebar-brand-icon rotate-n-15">
             <i class="fas fa-laugh-wink"></i>
         </div>
-        <div class="sidebar-brand-text mx-3">SB Admin <sup>2</sup></div>
+        <div class="sidebar-brand-text mx-3">CashNow <sup>Middleware</sup></div>
     </a>
 
     <!-- Divider -->
@@ -13,26 +13,31 @@
 
     <!-- Nav Item - Dashboard -->
     <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="/">
             <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span></a>
+            <span>Dashboard</span>
+        </a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="/clients">
             <i class="fas fa-fw fa-chart-area"></i>
-            <span>Clients</span></a>
+            <span>Clients</span>
+        </a>
     </li>
 
     <!-- Nav Item - Tables -->
     <li class="nav-item" id="myCheck" >
+        <a class="nav-link" href="">
             <i class="fas fa-fw fa-table"  ></i>
             <span>Vendors</span>
+        </a>
     </li>
 
     <li class="nav-item">
-        <a class="nav-link" href="charts.html">
+        <a class="nav-link" href="">
             <i class="fas fa-fw fa-chart-area"></i>
-            <span>Invoices</span></a>
+            <span>Invoices</span>
+        </a>
     </li>
 
     <!-- Divider -->
@@ -46,7 +51,7 @@
 </ul>
 <script>
     if (window.location.href.indexOf("vendors") > -1) {
- document.getElementById("myCheck").style.color = "white"
- console.log("hello");
-}
+        document.getElementById("myCheck").style.color = "white"
+        console.log("hello");
+    }
 </script>
