--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -1,4 +1,4 @@
-<%= turbo_frame_tag dom_id(client) do %>
+<%= turbo_frame_tag dom_id(client), class: "col-lg-6" do %>
     <div class="card shadow mb-4">
         <a href="#collapse_<%= client.id %>" class="d-block card-header py-3" data-toggle="collapse"
             role="button" aria-expanded="true" aria-controls="collapse_<%= client.id %>">
@@ -8,16 +8,23 @@
             <div class="card-body">
                 <ul>
                     <li>
-                        <strong>UserName: </strong> <%= client.username %>
-                        <strong>Password: </strong> <%= client.password %>
-                        <% if client.token.present? %>
-                            <strong>Token</strong> <%= client.token %>
-                        <% end %>
-                        <%= link_to '', client_path(client), method: :delete, data: { turbo: false, confirm: 'Are you sure?' } ,class: "action-icons fa fa-trash"%>
-                        <%= link_to '', edit_client_path(client), data: { turbo: false }, class: "action-icons fa fa-edit"%>
-                        <%= link_to '', client_vendors_path(client), data: { turbo: false }, class: "action-icons fa fa-users"%>
-                        <%= link_to '', new_client_api_path(client), data: { turbo: false }, class: "action-icons fa  fa-plus-square-o"%>
-                        <%= link_to '', fetch_token_client_path(client), method: :post, class: "action-icons fa fa-plane"%>
+                        <div class="row">
+                            <div class="col-md-9">
+                                <strong>UserName: </strong> <%= client.username %>
+                                <strong>Password: </strong> <%= client.password %>
+                                <% if client.token.present? %>
+                                    <p><strong>Token</strong> <%= client.token %></p>
+                                <% end %>
+                            </div>
+                            <div class="col-md-3">
+                                <%= link_to '', fetch_token_client_path(client), method: :post, class: "action-icons fa fa-plane"%>
+                                <%= link_to '', new_client_api_path(client), data: { turbo: false }, class: "action-icons fa  fa-plus-square-o"%>
+                                <%= link_to '', client_vendors_path(client), data: { turbo: false }, class: "action-icons fa fa-users"%>
+                                |
+                                <%= link_to '', edit_client_path(client), data: { turbo: false }, class: "action-icons fa fa-edit"%>
+                                <%= link_to '', client_path(client), method: :delete, data: { turbo: false, confirm: 'Are you sure?' } ,class: "action-icons fa fa-trash"%>
+                            </div>
+                        </div>
                     </li>
                     <% if client.login_api.present? %>
                     <li>
