--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -17,10 +17,10 @@
                                 <% end %>
                             </div>
                             <div class="col-md-3">
-                                <%= link_to '', fetch_token_client_path(client), method: :post, class: "action-icons fa fa-plane"%>
-                                <%= link_to '', new_client_api_path(client), data: { turbo: false }, class: "action-icons fa  fa-plus-square-o"%>
+                                <%= link_to '', fetch_token_client_path(client), method: :post, class: "action-icons fa fa-paper-plane"%>
                                 <%= link_to '', client_vendors_path(client), data: { turbo: false }, class: "action-icons fa fa-users"%>
                                 |
+                                <%= link_to '', new_client_api_path(client), data: { turbo: false }, class: "action-icons fa fa-plus-square"%>
                                 <%= link_to '', edit_client_path(client), data: { turbo: false }, class: "action-icons fa fa-edit"%>
                                 <%= link_to '', client_path(client), method: :delete, data: { turbo: false, confirm: 'Are you sure?' } ,class: "action-icons fa fa-trash"%>
                             </div>
