--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -12,33 +12,14 @@
     <hr class="sidebar-divider my-0">
 
     <!-- Nav Item - Dashboard -->
-    <li class="nav-item active">
-        <a class="nav-link" href="/">
-            <i class="fas fa-fw fa-tachometer-alt"></i>
-            <span>Dashboard</span>
-        </a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="/clients">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Clients</span>
-        </a>
-    </li>
-
-    <!-- Nav Item - Tables -->
-    <li class="nav-item" id="myCheck" >
-        <a class="nav-link" href="">
-            <i class="fas fa-fw fa-table"  ></i>
-            <span>Vendors</span>
-        </a>
-    </li>
-
-    <li class="nav-item">
-        <a class="nav-link" href="">
-            <i class="fas fa-fw fa-chart-area"></i>
-            <span>Invoices</span>
-        </a>
-    </li>
+    <% @side_menu_items.each do |menu_item| %>
+        <li class="nav-item <%= request.original_fullpath.include?(menu_item[:key] || '')? 'active' : '' %>">
+            <a class="nav-link" href="<%= menu_item[:link] %>">
+                <i class="fas fa-fw <%= menu_item[:iconClass] %>"></i>
+                <span><%= menu_item[:text] %></span>
+            </a>
+        </li>
+    <% end %>
 
     <!-- Divider -->
     <hr class="sidebar-divider d-none d-md-block">
