login logout and worker redirections

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
         <div id="content-wrapper" class="d-flex flex-column">
           <div id="content">
             <%= render 'layouts/navbar' %>
-            <p class="notice"><%= notice %></p>
+            <!--<p class="notice"><%#= notice %></p>-->
             <p class="alert"><%= alert %></p>
             <%= yield %>
             <%= toastr_flash %>
