--- a/app/views/invoices/_invoice.html.erb
+++ b/app/views/invoices/_invoice.html.erb
@@ -7,6 +7,8 @@
                         <%= key %> = <%= invoice.data[key] %><br>
                     <% end %>
                 <% end %>
+            <% else %>
+                No Data Found
             <% end %>
         </div>
     <% end %>
