buttons configrations & liitle touchup on pages

--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -37,7 +37,9 @@
                 <%end%>
                 <br />
                 <div class="actions">
-                  <%= form.submit class:"btn btn-primary btn-user btn-block" %>
+                  <%= form.submit class:"btn btn-primary btn-user" %> |
+                  <%= link_to "Back" , clients_path, class: "btn btn-primary"%>
+
                 </div>
             </div>
           </div>
