--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -23,4 +23,4 @@
   <%= @client.token %>
 </p>
 
-<%= link_to "Back" , clients_path , class: "btn btn-info" %>
+<%= link_to "Back" , clients_path , class: "btn btn-primary" %>
