--- a/app/views/apis/_form.html.erb
+++ b/app/views/apis/_form.html.erb
@@ -1,16 +1,33 @@
 <%= form_for( [@client, @api] ) do |form| %>
-    <div class="field">
-        <%= form.label :api_method %>
-        <br />
-        <%= form.collection_select :api_method, Api.api_methods, :first, :first, include_blank: true ,class: "form-control-xs" %>
-    </div>
-    <div class="field">
-        <%= form.label :api_url %>
-        <br />
-        <%= form.text_field :api_url ,:required => true,class: "form-control-xs" %>
-    </div>
-    <br/>
-    <div class="actions">
-        <%= form.submit class:'btn btn-info' %>
+    <div class="container">
+        <div class="card o-hidden border-0 shadow-lg my-5">
+            <div class="card-body p-0">
+                <!-- Nested Row within Card Body -->
+                <div class="row">
+                    <div class="col-lg-7" style="align : center;">
+                        <div class="p-5">
+                            <div class="text-center">
+                            </div>
+                            <form class="user">
+                                <div class="form-group">
+                                    <div class="form-group">
+                                        <%= form.text_field :api_url ,:required => true,class: "form-control form-control-user", placeholder: "API URL" %>
+                                    </div>
+                                    <div class="form-group">
+                                        <%= form.label :api_method ,class: "h6 text-gray-900 mb-4" %>
+                                        <br />
+                                        <%= form.collection_select :api_method, Api.api_methods, :first, :first, include_blank: true ,class: "form-control form-control-lg" %>
+                                    </div>
+                                    <div class="actions">
+                                        <%= form.submit class:'btn btn-primary' %> |
+                                        <%= link_to "Back" , clients_path(@clients), class: "btn btn-primary"%>
+
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 <% end %>
