--- a/app/views/apis/edit.html.erb
+++ b/app/views/apis/edit.html.erb
@@ -1,3 +1,3 @@
-<h1>Update API</h1>
+<h1 class="h4 text-gray-900 mb-4">Update API</h1>
 <%= render 'form' ,api: @api %>
-<%= link_to "Back" , client_apis_path, class: "btn btn-info"%>
+<br/>
