--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -9,14 +9,14 @@
                 <ul>
                     <li>
                         <div class="row">
-                            <div class="col-md-9">
+                            <div class="col-xs-9 col-md-8 col-ms-8">
                                 <strong>UserName: </strong> <%= client.username %>
                                 <strong>Password: </strong> <%= client.password %>
                                 <% if client.token.present? %>
                                     <p><strong>Token</strong> <%= client.token %></p>
                                 <% end %>
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-xs-3 col-md-4 col-ms-4">
                                 <%= link_to '', fetch_token_client_path(client), method: :post, class: "action-icons fa fa-paper-plane"%>
                                 <%= link_to '', client_vendors_path(client), data: { turbo: false }, class: "action-icons fa fa-users"%>
                                 |
