--- a/app/views/invoices/_filter_form.html.erb
+++ b/app/views/invoices/_filter_form.html.erb
@@ -1,11 +1,16 @@
 <%= form_for(:search, class: 'form-inline', url: vendor_invoices_path, method: :get) do |form| %>
-    <div class="form-group row">
-        <div class="col-sm-2 mb-3 mb-sm-0">
-            <%= form.text_field :created_at, class: 'form-control form-control-user', data: { behavior: 'daterangepicker' } %>
+    <div class="row">
+        <div class="col-sm-6 col-md-2">
+            <%= form.date_field :from_date, data: { behavior: 'daterangepicker' } , class: "form-control datepicker" %>
         </div>
-        <div class="col-sm-2">
-            <%= form.text_field :created_at, class: 'form-control form-control-user', data: { behavior: 'daterangepicker' } %>
+        <div class="col-sm-6 col-md-2">
+            <%= form.date_field :to_date, data: { behavior: 'daterangepicker' }, class: "form-control datepicker" %>
+        </div>
+        <div class="col-sm-6 col-md-6">
+            <%= form.submit "Search", class: 'btn btn-primary' %>
+        </div>
+        <div class="col-sm-6 col-md-2">
+            <%= link_to "Back" , client_vendors_path(@vendor.client_id), class: "btn btn-primary float-right "%>
         </div>
     </div>
-  <%= form.submit "Search", class: 'btn btn-success' %>
 <% end %>
