--- a/app/javascript/packs/stylesheets/application.scss
+++ b/app/javascript/packs/stylesheets/application.scss
@@ -2,3 +2,9 @@
 .datepicker{
     width: 170px !important;
 }
+.accordian_head_success{
+    background-color: rgb(180, 248, 180);
+}
+.margin_zero{
+    margin: 0px;
+}
