--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -4,5 +4,5 @@
 <%= turbo_stream_from "invoices" %>
 
 <%= turbo_frame_tag "invoice_groups" do %>
-  <%= render @invoice_groups %>
+  <%= render @invoice_groups.order(:downloaded) %>
 <% end %>
