--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,7 +1,15 @@
-<%= render 'filter_form' %>
-<br/>
 <%= turbo_stream_from "invoice_groups" %>
 <%= turbo_stream_from "invoices" %>
+
+<div class="row">
+  <div class="col-md-10">
+    <%= render 'filter_form' %>
+  </div>
+  <div class="col-md-2">
+    <%= link_to '', fetch_data_client_vendor_path(@vendor.client, @vendor), method: :post, class: "btn btn-primary fa fa-paper-plane ml-4 mr-1"%>
+    <%= link_to "Back" , client_vendors_path(@vendor.client_id), class: "btn btn-primary"%>
+  </div>
+</div>
 
 <%= turbo_frame_tag "invoice_groups" do %>
   <%= render @invoice_groups.order(:downloaded) %>
