--- a/app/views/invoice_groups/_invoice_group.html.erb
+++ b/app/views/invoice_groups/_invoice_group.html.erb
@@ -14,8 +14,8 @@
                         <%= render invoice_group.filtered_invoices((params[:search][:from_date] rescue nil), (params[:search][:to_date] rescue nil)) %>
                     <% end %>
                     <div class= "col-md-1 float-right ml-3">
-                        <%= link_to "XLS", invoice_group_path(id: invoice_group.id ,format: :xls) , class: "fa fa-download" %>
-                        <%= link_to 'CSV', invoice_group_path(id: invoice_group.id, format: :csv), class: "fa fa-download "%> &ensp;
+                        <%= link_to "XLS", invoice_group_path(id: invoice_group.id, format: :xls, search: {from_date: (params[:search][:from_date] rescue nil), to_date: (params[:search][:to_date] rescue nil)}) , class: "fa fa-download" %>
+                        <%= link_to 'CSV', invoice_group_path(id: invoice_group.id, format: :csv, search: {from_date: (params[:search][:from_date] rescue nil), to_date: (params[:search][:to_date] rescue nil)}), class: "fa fa-download "%> &ensp;
                         <%= form_for(invoice_group, :remote => true) do |f| %>
                             <%= token_tag %> 
                             <%= f.check_box :downloaded, :onchange => '$(this.form).submit();' %>
