Task 1: Make service for client ,vendors,documents Task 2: Make api for client Task 3: Make api for vendors Task 4: Make api for invoice Task 5: add column in api model document_type Task 6: rename table invoice to documents Task 7: perform settings in applictation according to tble name change

--- a/app/views/clients/_client.html.erb
+++ b/app/views/clients/_client.html.erb
@@ -13,7 +13,7 @@
                                 <strong>UserName: </strong> <%= client.username %>
                                 <strong>Password: </strong> <%= client.password %>
                                 <% if client.token.present? %>
-                                    <p><strong>Token</strong> <%= client.token %></p>
+                                    <p><strong>Token: </strong> <%= client.token %></p>
                                 <% end %>
                             </div>
                             <div class="col-xs-3 col-md-4 col-ms-4">
@@ -27,18 +27,18 @@
                         </div>
                     </li>
                     <% if client.login_api.present? %>
-                    <li>
-                        <h5>Login API</h5>
-                        <%= render partial: "apis/api", locals: { client: client, api: client.login_api } %>
-                    </li>
+                        <li>
+                            <h5>Login API</h5>
+                            <%= render partial: "apis/api", locals: { client: client, api: client.login_api } %>
+                        </li>
                     <% end %>
                     <% if client.apis.present? %>
-                    <li>
-                        <h5>Data Fetch API</h5>
-                        <% client.apis.each_with_index do |api, index| %>
-                            <%= render partial: "apis/api", locals: { client: client, api: api } %>
-                        <% end %>
-                    </li>
+                        <li>
+                            <h5>Data Fetch API</h5>
+                            <% client.apis.each_with_index do |api, index| %>
+                                <%= render partial: "apis/api", locals: { client: client, api: api } %>
+                            <% end %>
+                        </li>
                     <% end %>
                 </ul>
             </div>
