--- a/app/views/apis/_api.html.erb
+++ b/app/views/apis/_api.html.erb
@@ -1,6 +1,12 @@
 <div class="row">
     <div class="col-md-10">
-        <strong><%= api.display_method %></strong>  
+        <p>
+            <% if api.document_type.present?  %>
+                for:
+                <strong><%= api.document_type.capitalize %></strong>
+            <% end %>
+            &ensp;method:<strong><%= api.display_method %></strong>  
+        </p>
         <%= api.api_url %>
     </div>
     <div class="col-md-2">
