--- a/app/views/apis/_form.html.erb
+++ b/app/views/apis/_form.html.erb
@@ -14,6 +14,9 @@
                                         <%= form.text_field :api_url ,:required => true,class: "form-control form-control-user", placeholder: "API URL" %>
                                     </div>
                                     <div class="form-group">
+                                        <%= form.text_field :document_type ,class: "form-control form-control-user", placeholder: "decoument Type" %>
+                                    </div>
+                                    <div class="form-group">
                                         <%= form.label :api_method ,class: "h6 text-gray-900 mb-4" %>
                                         <br />
                                         <%= form.collection_select :api_method, Api.api_methods, :first, :first, include_blank: true ,class: "form-control form-control-lg" %>
