--- a/app/views/clients/_form.html.erb
+++ b/app/views/clients/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with model: @client do |form| %>
   <div class="container">
-    <div class="card o-hidden border-0 shadow-lg my-5">
+    <div class="card o-hidden border-0 shadow-lg my-5 card_design">
       <div class="card-body p-0">
         <!-- Nested Row within Card Body -->
         <div class="row">
