--- a/app/assets/stylesheets/client.scss
+++ b/app/assets/stylesheets/client.scss
@@ -1,3 +1,37 @@
 // Place all the styles related to the client controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .client_button {
+        margin-right: 10px;
+    }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .client_button {
+        margin-right: 10px;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+    .client_button {
+        margin-right: 10px;
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+    .client_button {
+        margin-right: 10px;
+    }
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .client_button {
+        margin-right: 10px;
+    }
+}
